--- a/my-app/package.json
+++ b/my-app/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.59.0",
     "recharts": "^3.0.2",
     "sonner": "^2.0.5",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
