--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,17 +7,18 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "node scripts/test_crud.js",
-    "test:all": "node scripts/test_all_endpoints.js",
     "db:setup": "node scripts/setup_database.js",
     "db:check": "node scripts/setup_database.js --check",
+    "db:migrate": "node scripts/run_migration.js",
+    "db:seed": "node scripts/seed_realistic_products.js",
     "db:clean": "node scripts/clean_database.js",
     "db:clean-data": "node scripts/clean_database.js --data",
     "db:clean-tables": "node scripts/clean_database.js --tables",
     "db:clean-all": "node scripts/clean_database.js --all",
-    "utils:stats": "node scripts/utils.js --stats",
-    "utils:recent": "node scripts/utils.js --recent",
-    "utils:categories": "node scripts/utils.js --categories",
-    "utils:health": "node scripts/utils.js --health"
+    "utils:stats": "node scripts/utils.js stats",
+    "utils:recent": "node scripts/utils.js recent",
+    "utils:categories": "node scripts/utils.js categories",
+    "utils:health": "node scripts/utils.js health"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
@@ -31,6 +32,7 @@
     "morgan": "~1.9.1",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
