--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "bwip-js": "^4.7.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
