Enhance backend and frontend functionality for super admin features
- Added new environment variables for super admin email and password in the backend.
- Introduced analytics routes in the super admin section for sales over time, store performance, and top products.
- Improved order creation logic in the backend to validate items and handle stock checks.
- Updated frontend analytics page to display key metrics and trends with enhanced layout and styling.
- Refactored dashboard and sidebar components for better organization and user experience.

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -17,3 +17,5 @@ FRONTEND_URL=http://localhost:3000
 # Solo necesario si quieres usarlo en el backend directamente
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
+SUPER_ADMIN_EMAIL=admin@vendly.co
+SUPER_ADMIN_PASSWORD=SuperAdmin123!
