Update package.json and README.md for production verification and deployment instructions
- Added a new script "verify:production" to package.json for verifying production configuration.
- Updated README.md to include instructions for running the new verification script and detailed deployment steps for Fly.io.
- Enhanced the deployment section with a checklist and security recommendations for production environments.

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,8 @@
     "utils:recent": "node scripts/utils.js recent",
     "utils:categories": "node scripts/utils.js categories",
     "utils:health": "node scripts/utils.js health",
-    "test:analytics": "node scripts/test_analytics_endpoints.js"
+    "test:analytics": "node scripts/test_analytics_endpoints.js",
+    "verify:production": "node scripts/verify_production.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
