--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "description": "Backend API para el sistema de checkout de Vendly con SQL directo",
   "private": true,
   "scripts": {
+    "build": "echo 'No build step required for Node.js application' && npm run verify:production",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "node scripts/test_crud.js",
