--- a/Backend/.dockerignore
+++ b/Backend/.dockerignore
@@ -2,19 +2,19 @@
 node_modules
 npm-debug.log
 yarn-error.log
+# Note: package-lock.json is needed for npm ci, so we keep it
 
 # Environment files
 .env
 .env.local
 .env.*.local
+.env.example
 
 # Git
 .git
 .gitignore
 .gitattributes
-
-# Documentation
-*.md
+.gitkeep
 
 # IDE
 .vscode
@@ -22,31 +22,48 @@ yarn-error.log
 *.swp
 *.swo
 *~
+.project
+.classpath
+.settings
 
 # OS
 .DS_Store
 Thumbs.db
+.DS_Store?
 
 # Test files
 test
 tests
+__tests__
 *.test.js
 *.spec.js
 coverage
+.nyc_output
 
 # Build artifacts
 dist
 build
 .next
 out
+*.tsbuildinfo
 
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Scripts (optional - remove if you need them in production)
-scripts
-
-# Postman collections
+# Postman collections (not needed in production)
 *.postman_collection.json
+
+# Documentation (keep README.md for production)
+DOCUMENTACION.md
+FLY_DEPLOY.md
+PRODUCTION_CHECKLIST.md
+docs/
+
+# Fly.io config (not needed in Docker image)
+fly.toml
 
