--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,11 +3,18 @@
   "version": "2.0.0",
   "description": "Backend API para el sistema de checkout de Vendly con SQL directo",
   "private": true,
+  "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
-    "build": "echo 'No build step required for Node.js application' && npm run verify:production",
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "npm run verify:production",
     "test": "node scripts/test_crud.js",
+    "test:analytics": "node scripts/test_analytics_endpoints.js",
+    "verify:production": "node scripts/verify_production.js",
     "db:setup": "node scripts/setup_database.js",
     "db:check": "node scripts/setup_database.js --check",
     "db:migrate": "node scripts/run_migration.js",
@@ -19,30 +26,22 @@
     "utils:stats": "node scripts/utils.js stats",
     "utils:recent": "node scripts/utils.js recent",
     "utils:categories": "node scripts/utils.js categories",
-    "utils:health": "node scripts/utils.js health",
-    "test:analytics": "node scripts/test_analytics_endpoints.js",
-    "verify:production": "node scripts/verify_production.js"
+    "utils:health": "node scripts/utils.js health"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
     "bwip-js": "^4.7.0",
-    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "pg": "^8.16.3",
-    "postgres": "^3.4.7",
     "qrcode": "^1.5.4",
-    "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "tsoa": "^6.6.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
