Update Fly.io configuration and server listening address for self-checkout application
- Changed application name in fly.toml from "vendly-checkout-backend" to "self-checkout" for better alignment with project identity.
- Updated server.js to listen on "0.0.0.0" instead of localhost, allowing external access to the API documentation.

--- a/Backend/fly.toml
+++ b/Backend/fly.toml
@@ -1,7 +1,7 @@
 # Fly.io configuration for Vendly Checkout Backend
 # Generated for Node.js Express application
 
-app = "vendly-checkout-backend"
+app = "self-checkout"
 primary_region = "iad"  # Washington, D.C. - Change to your preferred region
 
 [build]
