--- a/Backend/fly.toml
+++ b/Backend/fly.toml
@@ -1,33 +1,22 @@
-# Fly.io configuration for Vendly Checkout Backend
-# Generated for Node.js Express application
+# fly.toml app configuration file generated for self-checkout-9a4fzg on 2025-11-29T03:26:35Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "self-checkout"
-primary_region = "iad"  # Washington, D.C. - Change to your preferred region
+app = 'self-checkout-9a4fzg'
+primary_region = 'iad'
 
 [build]
-  # Fly.io will automatically detect Dockerfile
-
-[env]
-  NODE_ENV = "production"
-  PORT = "3000"
 
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
-
-  [[http_service.checks]]
-    grace_period = "10s"
-    interval = "30s"
-    method = "GET"
-    timeout = "5s"
-    path = "/health"
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  cpu_kind = 'shared'
   cpus = 1
   memory_mb = 512
-
