--- a/Backend/package.json
+++ b/Backend/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "pg": "^8.16.3",
+    "pg-format": "^1.0.4",
     "qrcode": "^1.5.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
