Enhance database connection handling and improve server startup messages
- Added new database connection testing scripts (`db:test` and `db:diagnose`) to facilitate easier troubleshooting.
- Updated `testConnection` function to include retry logic with exponential backoff for improved resilience against transient connection issues.
- Enhanced server startup messages to provide clearer feedback on database connection status and potential troubleshooting steps.
- Introduced a fade-in animation in CSS for improved UI transitions across the application.
- Updated AdminLayout to manage visibility for new payment methods route, ensuring consistent navigation experience.

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,8 @@
     "verify:production": "node scripts/verify_production.js",
     "db:setup": "node scripts/setup_database.js",
     "db:check": "node scripts/setup_database.js --check",
+    "db:test": "node scripts/check-connection.js",
+    "db:diagnose": "node scripts/diagnose-db-connection.js",
     "db:migrate": "node scripts/run_migration.js",
     "db:seed": "node scripts/seed_realistic_products.js",
     "db:clean": "node scripts/clean_database.js",
