Enhance product statistics retrieval and error handling
- Updated ProductController to filter product statistics by the authenticated user's ID, ensuring personalized data retrieval.
- Modified ProductService to accept an optional ownerId parameter for querying statistics specific to a store.
- Improved error handling in both the controller and service, providing clearer messages and handling connection issues gracefully.
- Enhanced useProductStats hook to return default values for statistics when backend errors occur, improving user experience during data fetching.

--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -4,8 +4,8 @@
     "description": "Digital checkout for Swiss farm shops",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#FAFAFA",
-    "theme_color": "#22C55F",
+    "background_color": "#25D076",
+    "theme_color": "#25D076",
     "orientation": "portrait",
     "icons": [
       {
