Implement public invoice retrieval by share token and enhance invoice service
- Added a new endpoint to retrieve invoices using a public share token, allowing unauthenticated access to specific invoices.
- Implemented the logic in InvoiceController to handle requests for invoices by share token, including error handling for missing or invalid tokens.
- Enhanced InvoiceService with a method to generate unique share tokens for invoices and retrieve invoices based on these tokens.
- Updated invoice routes to include the new public endpoint for share token access.
- Improved frontend components to support sharing and downloading invoices, including UI adjustments for better user experience.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,7 +23,9 @@
     "apexcharts": "^5.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.5.9",
     "qrcode": "^1.5.4",
